--- a/.github/templates/common.yml.j2
+++ b/.github/templates/common.yml.j2
@@ -7,8 +7,8 @@
 
 # NOTE: If testing pytorch/builder changes you can change this variable to change what pytorch/builder reference
 #       the binary builds will check out
-{%- set builder_repo = "tinglvv/builder" -%}
-{%- set builder_branch = "tl-124-arm" -%}
+{%- set builder_repo = "pytorch/builder" -%}
+{%- set builder_branch = "main" -%}
 
 {%- macro concurrency(build_environment) -%}
 concurrency:
